# KubeflowAccuPred

./: .gitignore  README.md  inference.py  pyproject.toml  test.py  train_pipeline_execute.py  training_pipeline.py  training_pipeline_catboost.py
.aim/: aim_db  run_metadata.sqlite
.aim/meta/chunks/053b2cd1f4824741b2a05f1e/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/0a562237e5e647c4bda96be3/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/index/: 000883.sst  000885.sst  000894.sst  000903.sst  000912.sst  IDENTITY  LOG  LOG.old.1701176143549265  LOG.old.1701176144088276  LOG.old.1701176144346137  LOG.old.1701176144586049  LOG.old.1701176144824242  LOG.old.1701176145060530  LOG.old.1701176145322060  LOG.old.1701176145558232  LOG.old.1701176145795463  MANIFEST-000907
compiled_pipelines/: Customer_freq_training.yaml  Customer_freq_training_catboost.yaml
components/: __init__.py  training_components.py  training_components_catboost.py
data/: processed_data.csv
data/splits/: X_test.npy  X_train.npy  y_test.npy  y_train.npy
data_preprocessing/: __init__.py  data_preprocessing.py
data_splits/: __init__.py  data_split.py
hyperparam_optimisation/: __init__.py  hyperparam_optim.py  hyperparam_optim_catboost.py
model/: best_xgb_model.pkl
model_testing/: __init__.py  model_test.py  model_test_catboost.py
notebooks/: nb.md  testing.ipynb
notebooks/model/: best_xgb_model.pkl
params/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
pipelines/: __init__.py  training_piepeline.py  training_pipeline.py
(+1591 files in other folders)
