[tool.poetry]
name = "customer-freq-pipeline"
version = "0.1.0"
description = "A customer shopping frequency prediction pipeline"
authors = ["Viraj Shah <viraj-s15> <viraj.v.shah03@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
kfp = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"
numpy = "^1.26.2"
xgboost = "^2.0.2"
optuna = "^3.4.0"
aim = "^3.17.5"
ipykernel = "^6.27.1"
logging = "^0.4.9.6"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
